refactor: recipe category, product size
